--- a/KiteTransmon_datagen_notebook.ipynb
+++ b/KiteTransmon_datagen_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
     "\n",
     "\n",
     "\n",
-    "def dephasing_rates(dataset, A_phi=1e6, T = 20e-3):\n",
+    "def dephasing_rates(dataset, A_phi=2*np.pi*3e-6, T = 20e-3):\n",
     "    h_over_kb= 6.62607015e-34 /1.380649e-23\n",
     "\n",
     "    dphi_ext=1e-5*2*np.pi\n",
@@ -95,12 +95,14 @@
     "\n",
     "    kappa=dataset.loc[:,f'T1_03']**-1*np.tanh(.5*h_over_kb*(omega_th)/T)\n",
     "\n",
-    "    dataset.loc[:,'Gamma_th'] = (n_th*kappa* chi**2/(kappa**2+chi**2))\n"
+    "    dataset.loc[:,'Gamma_th'] = (n_th*kappa* chi**2/(kappa**2+chi**2))\n",
+    "\n",
+    "    dataset.loc[:,'T2'] = 1/(dataset.loc[:,'Gamma_th']+dataset.loc[:,'Gamma_chg_drift']+dataset.loc[:,'Gamma_flux'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +119,12 @@
     "    EJ_sweep = np.unique(data.loc[:,'E_J'])\n",
     "    ECj_sweep = np.unique(data.loc[:,'E_Cj'])\n",
     "    ECs_sweep = np.unique(data.loc[:,'E_Cs'])\n",
+    "\n",
+    "    data.loc[:,'omega_p'] = round(np.sqrt(8*data.loc[:,'E_J']*data.loc[:,'E_Cj']),8)\n",
+    "    data.loc[:,'EJ/ECj'] = round(data.loc[:,'E_J']/data.loc[:,'E_Cj'],8)\n",
+    "    data.loc[:,'EJ/EL'] = round(data.loc[:,'E_J']/data.loc[:,'E_L'],8)\n",
+    "    data.loc[:,'EL/ECj'] = round(data.loc[:,'E_L']/data.loc[:,'E_Cj'],8)\n",
+    "    data.loc[:,'EL/ECs'] = round(data.loc[:,'E_L']/data.loc[:,'E_Cs'],8)\n",
     "\n",
     "    return data, EL_sweep, EJ_sweep, ECj_sweep, ECs_sweep"
    ]
@@ -158,7 +166,7 @@
     }
    ],
    "source": [
-    "data,_,_,_,_ = data_formatting(filename)\n",
+    "dataset,_,_,_,_ = data_formatting(filename)\n",
     "relaxation_rates(data)\n",
     "dephasing_rates(data)"
    ]
@@ -230,7 +238,7 @@
     "        plt.xscale('log')\n",
     "        plt.yscale('log')\n",
     "    \n",
-    "    return plt.gca()  # Return the current axes instance\n",
+    "    return plt.gca()  \n",
     "\n",
     "def plot_2D_line(data, X_label, Y_label, Z_label, param_label, param_val,\n",
     "                        log_scale_xy = True, log_scale_z = True):\n",
@@ -330,7 +338,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_1D(data, 'E_L', 'omega_01')"
+    "plot_1D(dataset, 'EL/ECs', 'omega_01')\n",
+    "plot_2D(dataset, 'EL/EJ', 'EJ/ECj', 'omega_01', log_scale_xy = False, log_scale_z = True)\n",
+    "plot_2D(dataset, 'EL/EJ', 'EJ/ECj', 'T1_01', log_scale_xy = False, log_scale_z = True)\n",
+    "plot_2D(dataset, 'EL/EJ', 'EJ/EC', 'T2', log_scale_xy = False, log_scale_z = True)"
    ]
   }
  ],
