--- a/KiteTransmon_datagen_notebook.ipynb
+++ b/KiteTransmon_datagen_notebook.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,16 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "\n",
     "import Kite_Transmon_datagen\n",
+    "\n",
+    "from concurrent.futures import ProcessPoolExecutor\n",
+    "\n",
+    "from tqdm import tqdm\n",
     " "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +81,7 @@
     "\n",
     "\n",
     "\n",
-    "def dephasing_rates(dataset, A_phi=2*np.pi*3e-6, T = 20e-3):\n",
+    "def dephasing_rates(dataset, A_phi=2*np.pi*3e-6, T = 20e-3, T_cav=50e-3):\n",
     "    h_over_kb= 6.62607015e-34 /1.380649e-23\n",
     "\n",
     "    dphi_ext=1e-5*2*np.pi\n",
@@ -93,16 +97,18 @@
     "\n",
     "    n_th=(np.exp(h_over_kb*(omega_th)/T) -1)**-1\n",
     "\n",
-    "    kappa=dataset.loc[:,f'T1_03']**-1*np.tanh(.5*h_over_kb*(omega_th)/T)\n",
+    "    kappa=dataset.loc[:,'T1_03']**-1*np.tanh(.5*h_over_kb*(omega_th)/T)\n",
     "\n",
     "    dataset.loc[:,'Gamma_th'] = (n_th*kappa* chi**2/(kappa**2+chi**2))\n",
+    "\n",
+    "    # dataset.loc[:,'Gamma_th'] = \n",
     "\n",
     "    dataset.loc[:,'T2'] = 1/(dataset.loc[:,'Gamma_th']+dataset.loc[:,'Gamma_chg_drift']+dataset.loc[:,'Gamma_flux'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,21 +137,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/2250 [00:10<?, ?it/s]\n"
+      "  0%|          | 0/33 [00:00<?, ?it/s]"
      ]
     }
    ],
    "source": [
     "filename= '/workspace/data/data_simulation_EJoEC.csv'\n",
+    "\n",
+    "all_params = Kite_Transmon_datagen.CSV_gen(EJ_EC_sweep_bool=False,EJ2_EL_sweep_bool = True)\n",
     "if __name__ == '__main__':\n",
-    "    Kite_Transmon_datagen.CSV_gen(filename,EJ_EC_sweep_bool=True,EJ2_EL_sweep_bool = False)\n"
+    "    with ProcessPoolExecutor() as executor:\n",
+    "            results = list(tqdm(executor.map(Kite_Transmon_datagen.process, all_params), total=len(all_params)))\n",
+    "\n",
+    "# Convert results to a DataFrame\n",
+    "res = pd.DataFrame(results)\n",
+    "\n",
+    "compression_options = dict(method='zip', archive_name=f'{filename}.csv')\n",
+    "res.to_csv(f'{filename}.zip', compression=compression_options, index=False)"
    ]
   },
   {
@@ -167,8 +182,8 @@
    ],
    "source": [
     "dataset,_,_,_,_ = data_formatting(filename)\n",
-    "relaxation_rates(data)\n",
-    "dephasing_rates(data)"
+    "relaxation_rates(dataset)\n",
+    "dephasing_rates(dataset)"
    ]
   },
   {
